Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>
 <a id="welcome-to-project-damnitzach" class="anchor" href="#welcome-to-project-damnitzach" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Project-DamnitZach</h3>
 
-<p><img src="logomakr.com/986gn4" alt="Thanks go to flaticon and freepik for giving me the clip art I need and logo maker for helping me put it together">
+<p>(Logo Coming Soon!)
 This site is the product of my 10 minutes of work that I have spent on this so far. The idea of this project was to introduce myself to the Source SDK. The ending product with hopefully be a coop/pvp zombie game or some thing like that. I am using HL2 source code. </p>
 
 <h3>
