--- a/index.html
+++ b/index.html
@@ -1,63 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>Project-DamnitZach by Madc0wz</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Project-DamnitZach</h1>
-        <p class="header">Me d*cking around trying stuff with the 2013 edition of the Source SDK</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/Madc0wz/source-sdk-2013/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/Madc0wz/source-sdk-2013/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/Madc0wz/source-sdk-2013">View On GitHub</a></li>
-        </ul>
+    <header>
+      <div class="container">
+        <h1>Project-DamnitZach</h1>
+        <h2>Me d*cking around trying stuff with the 2013 edition of the Source SDK</h2>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/Madc0wz">Madc0wz</a></p>
+        <section id="downloads">
+          <a href="https://github.com/Madc0wz/source-sdk-2013/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Madc0wz/source-sdk-2013/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Madc0wz/source-sdk-2013" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-      </header>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <h3>
 <a id="welcome-to-project-damnitzach" class="anchor" href="#welcome-to-project-damnitzach" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Project-DamnitZach</h3>
 
-<p>(Logo Coming Soon!)
-<img src="/images/goddammitzachlogo.png" alt=""></p>
+<p>(Logo Coming Soon!)</p>
 
 <p>This site is the product of my 10 minutes of work that I have spent on this so far. The idea of this project was to introduce myself to the Source SDK. The ending product with hopefully be a coop/pvp zombie game or some thing like that. I am using HL2 source code. </p>
 
 <h3>
 <a id="cooperation" class="anchor" href="#cooperation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cooperation</h3>
 
-<p>I for the most part don't want help with the base game as the purpose was for me to intro myself to the source SDK. However I am always wanting for extra tips on the Source SDK as I have not used it before. I am also always wanting for people who model and want to give me an old project as I suck at design. Lastly I am always ready for new ideas and brainstormers to give me the ideas to match your image of the perfect game. (Zach, if you are reading this, goddamit).</p>
+<p>I for the most part don't want help with the base game as the purpose was for me to intro myself to the source SDK. However I am always wanting for extra tips on the Source SDK as I have not used it before. I am also always wanting for people who design models and want to give me one or two as I suck at design. Lastly I am always ready for new ideas and brainstormers to give me the ideas to match your image of the perfect game. (Zach, if you are reading this, goddamit).</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Thanks to <a href="https://github.com/JohnDrinkWater" class="user-mention">@JohnDrinkWater</a> and the valve team for making the SDK available for people to use. Thanks to Zach(you know who you are) for my inspiration. and thanks to the <a href="https://github.com/NSA" class="user-mention">@NSA</a> for watching me go through this. Thanks to flaticon, freepik and logomaker.com for helping me put together the logo at the top.</p>
+<p>Thanks to <a href="https://github.com/JohnDrinkWater" class="user-mention">@JohnDrinkWater</a> and the valve team for making the SDK available for people to use. Thanks to Zach(you know who you are) for my inspiration. and thanks to the <a href="https://github.com/NSA" class="user-mention">@NSA</a> for watching me go through this. As well as all the people on the Source SDK wiki for leaving me all the help I could need</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Want to help me out a bit? Want to get a big thanks from yours truly? Wanna get in on the beta that might not actually happen? Well you've come to the right place! Contact me at <a href="mailto:madc0wz.damnitzach@gmail.com">madc0wz.damnitzach@gmail.com</a> ill try to reply within 72 hours.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
   </body>
 </html>
