Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Thanks to <a href="https://github.com/JohnDrinkWater" class="user-mention">@JohnDrinkWater</a> and the valve team for making the SDK available for people to use. Thanks to Zach(you know who you are) for my inspiration. and thanks to the <a href="https://github.com/NSA" class="user-mention">@NSA</a> for watching me go through this. As well as all the people on the Source SDK wiki for leaving me all the help I could need</p>
+<p>Thanks to <a href="https://github.com/JohnDrinkWater" class="user-mention">@JohnDrinkWater</a> and the valve team for making the SDK available for people to use. Thanks to Zach(you know who you are) for my inspiration. Thanks to Andrew for bein' a lil B*tch. and thanks to the <a href="https://github.com/NSA" class="user-mention">@NSA</a> for watching me go through this. As well as all the people on the Source SDK wiki for leaving me all the help I could need</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
