--- a/index.html
+++ b/index.html
@@ -43,15 +43,25 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Thanks to <a href="https://github.com/JohnDrinkWater" class="user-mention">@JohnDrinkWater</a> and the valve team for making the SDK available for people to use. Thanks to Zach(you know who you are) for my inspiration. Thanks to Andrew for bein' a lil B*tch. and thanks to the <a href="https://github.com/NSA" class="user-mention">@NSA</a> for watching me go through this. As well as all the people on the Source SDK wiki for leaving me all the help I could need</p>
+<p>Thanks to <a href="https://github.com/JohnDrinkWater" class="user-mention">@JohnDrinkWater</a> and the valve team for making the SDK available for people to use. Thanks to Zach(you know who you are) for my inspiration as well as the sick *** logo you're making me. Thanks to Andrew for bein' a lil B*tch. and thanks to the <a href="https://github.com/NSA" class="user-mention">@NSA</a> for watching me go through this. As well as all the people on the Source SDK wiki for leaving me all the help I could need.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Want to help me out a bit? Want to get a big thanks from yours truly? Wanna get in on the beta that might not actually happen? Well you've come to the right place! Contact me at <a href="mailto:madc0wz.damnitzach@gmail.com">madc0wz.damnitzach@gmail.com</a> ill try to reply within 72 hours.</p>
+<p>Want to help me out a bit? Want to get a big thanks from yours truly? Wanna get in on the beta that probably wont actually happen? Well you've come to the right place! Contact me at <a href="mailto:madc0wz.damnitzach@gmail.com">madc0wz.damnitzach@gmail.com</a> I'll try to reply within 72 hours.</p>
       </section>
     </div>
 
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-69441063-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
